parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ISLIST

Grammar

Rule 0     S' -> start
Rule 1     start -> CALC calc
Rule 2     start -> CHECK check
Rule 3     start -> SPLIT split
Rule 4     start -> TOKEN token
Rule 5     start -> ISNUMBER isnumber
Rule 6     start -> STATE state
Rule 7     lang -> premises MINUS MINUS conclusion
Rule 8     lang -> MINUS MINUS conclusion
Rule 9     premises -> statement
Rule 10    statement -> statement COMA statement
Rule 11    statement -> exp symb term
Rule 12    statement -> exp symb VAR
Rule 13    statement -> exp IN NAME
Rule 14    exp -> exp COMA exp
Rule 15    exp -> exp SEMICOLON exp
Rule 16    exp -> NAME OP exp CP
Rule 17    exp -> term
Rule 18    exp -> VAR
Rule 19    term -> NUM
Rule 20    term -> boolean
Rule 21    term -> list
Rule 22    list -> OSB exp CSB
Rule 23    list -> INF exp SUP
Rule 24    list -> OSB CSB
Rule 25    symb -> EQUAL EQUAL
Rule 26    symb -> INF EQUAL
Rule 27    symb -> SUP EQUAL
Rule 28    symb -> INF
Rule 29    symb -> SUP
Rule 30    symb -> MINUS SUP
Rule 31    conclusion -> exp MINUS SUP exp
Rule 32    conclusion -> list ins_exp MINUS SUP list
Rule 33    ins_exp -> NAME
Rule 34    ins_exp -> exp
Rule 35    boolean -> TRUE
Rule 36    boolean -> FALSE
Rule 37    check -> lang
Rule 38    split -> s_exp
Rule 39    s_exp -> s_exp COMA s_exp
Rule 40    s_exp -> s_exp SEMICOLON s_exp
Rule 41    s_exp -> NAME OP exp CP
Rule 42    s_exp -> term
Rule 43    s_exp -> VAR
Rule 44    token -> t_exp
Rule 45    token -> t_list
Rule 46    token -> t_statement
Rule 47    token -> t_state_ins
Rule 48    t_exp -> t_exp COMA t_exp
Rule 49    t_exp -> t_exp SEMICOLON t_exp
Rule 50    t_exp -> NAME OP t_exp CP
Rule 51    t_exp -> t_term
Rule 52    t_exp -> VAR
Rule 53    t_term -> NUM
Rule 54    t_term -> boolean
Rule 55    t_term -> t_list
Rule 56    t_list -> OSB t_exp CSB
Rule 57    t_list -> INF t_exp SUP
Rule 58    t_list -> OSB CSB
Rule 59    t_list -> INF SUP
Rule 60    t_statement -> t_statement COMA t_statement
Rule 61    t_statement -> t_exp symb term
Rule 62    t_statement -> t_exp symb VAR
Rule 63    t_statement -> t_exp IN NAME
Rule 64    t_state_ins -> t_list t_ins_exp
Rule 65    t_ins_exp -> t_ins
Rule 66    t_ins_exp -> t_exp
Rule 67    t_ins -> NAME
Rule 68    isnumber -> NUM
Rule 69    calc -> c_exp
Rule 70    calc -> c_condition
Rule 71    c_condition -> c_exp comparator c_exp
Rule 72    comparator -> EQUAL EQUAL
Rule 73    comparator -> SUP
Rule 74    comparator -> SUP EQUAL
Rule 75    comparator -> INF
Rule 76    comparator -> INF EQUAL
Rule 77    c_exp -> NAME OP c_exp CP
Rule 78    c_exp -> c_exp COMA c_exp
Rule 79    c_exp -> c_exp SEMICOLON c_exp
Rule 80    c_exp -> NUM
Rule 81    c_exp -> boolean
Rule 82    c_exp -> list
Rule 83    c_list -> OSB c_morelist CSB
Rule 84    c_morelist -> NUM COMA c_morelist
Rule 85    c_morelist -> NUM SEMICOLON c_morelist
Rule 86    c_morelist -> NUM
Rule 87    c_list -> OSB CSB
Rule 88    c_list -> INF c_morelist SUP
Rule 89    state -> st_list st_ins_exp
Rule 90    st_ins_exp -> st_ins
Rule 91    st_ins_exp -> st_exp
Rule 92    st_ins -> NAME
Rule 93    st_exp -> NAME OP t_exp CP
Rule 94    st_list -> OSB s_exp CSB
Rule 95    st_list -> INF s_exp SUP

Terminals, with rules where they appear

CALC                 : 1
CHECK                : 2
COMA                 : 10 14 39 48 60 78 84
CP                   : 16 41 50 77 93
CSB                  : 22 24 56 58 83 87 94
EQUAL                : 25 25 26 27 72 72 74 76
FALSE                : 36
IN                   : 13 63
INF                  : 23 26 28 57 59 75 76 88 95
ISLIST               : 
ISNUMBER             : 5
MINUS                : 7 7 8 8 30 31 32
NAME                 : 13 16 33 41 50 63 67 77 92 93
NUM                  : 19 53 68 80 84 85 86
OP                   : 16 41 50 77 93
OSB                  : 22 24 56 58 83 87 94
SEMICOLON            : 15 40 49 79 85
SPLIT                : 3
STATE                : 6
SUP                  : 23 27 29 30 31 32 57 59 73 74 88 95
TOKEN                : 4
TRUE                 : 35
VAR                  : 12 18 43 52 62
error                : 

Nonterminals, with rules where they appear

boolean              : 20 54 81
c_condition          : 70
c_exp                : 69 71 71 77 78 78 79 79
c_list               : 
c_morelist           : 83 84 85 88
calc                 : 1
check                : 2
comparator           : 71
conclusion           : 7 8
exp                  : 11 12 13 14 14 15 15 16 22 23 31 31 34 41
ins_exp              : 32
isnumber             : 5
lang                 : 37
list                 : 21 32 32 82
premises             : 7
s_exp                : 38 39 39 40 40 94 95
split                : 3
st_exp               : 91
st_ins               : 90
st_ins_exp           : 89
st_list              : 89
start                : 0
state                : 6
statement            : 9 10 10
symb                 : 11 12 61 62
t_exp                : 44 48 48 49 49 50 56 57 61 62 63 66 93
t_ins                : 65
t_ins_exp            : 64
t_list               : 45 55 64
t_state_ins          : 47
t_statement          : 46 60 60
t_term               : 51
term                 : 11 17 42 61
token                : 4

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . CALC calc
    (2) start -> . CHECK check
    (3) start -> . SPLIT split
    (4) start -> . TOKEN token
    (5) start -> . ISNUMBER isnumber
    (6) start -> . STATE state

    CALC            shift and go to state 2
    CHECK           shift and go to state 3
    SPLIT           shift and go to state 4
    TOKEN           shift and go to state 5
    ISNUMBER        shift and go to state 6
    STATE           shift and go to state 7

    start                          shift and go to state 1

state 1

    (0) S' -> start .



state 2

    (1) start -> CALC . calc
    (69) calc -> . c_exp
    (70) calc -> . c_condition
    (77) c_exp -> . NAME OP c_exp CP
    (78) c_exp -> . c_exp COMA c_exp
    (79) c_exp -> . c_exp SEMICOLON c_exp
    (80) c_exp -> . NUM
    (81) c_exp -> . boolean
    (82) c_exp -> . list
    (71) c_condition -> . c_exp comparator c_exp
    (35) boolean -> . TRUE
    (36) boolean -> . FALSE
    (22) list -> . OSB exp CSB
    (23) list -> . INF exp SUP
    (24) list -> . OSB CSB

    NAME            shift and go to state 11
    NUM             shift and go to state 12
    TRUE            shift and go to state 15
    FALSE           shift and go to state 16
    OSB             shift and go to state 17
    INF             shift and go to state 18

    calc                           shift and go to state 8
    c_exp                          shift and go to state 9
    c_condition                    shift and go to state 10
    boolean                        shift and go to state 13
    list                           shift and go to state 14

state 3

    (2) start -> CHECK . check
    (37) check -> . lang
    (7) lang -> . premises MINUS MINUS conclusion
    (8) lang -> . MINUS MINUS conclusion
    (9) premises -> . statement
    (10) statement -> . statement COMA statement
    (11) statement -> . exp symb term
    (12) statement -> . exp symb VAR
    (13) statement -> . exp IN NAME
    (14) exp -> . exp COMA exp
    (15) exp -> . exp SEMICOLON exp
    (16) exp -> . NAME OP exp CP
    (17) exp -> . term
    (18) exp -> . VAR
    (19) term -> . NUM
    (20) term -> . boolean
    (21) term -> . list
    (35) boolean -> . TRUE
    (36) boolean -> . FALSE
    (22) list -> . OSB exp CSB
    (23) list -> . INF exp SUP
    (24) list -> . OSB CSB

    MINUS           shift and go to state 22
    NAME            shift and go to state 27
    VAR             shift and go to state 26
    NUM             shift and go to state 28
    TRUE            shift and go to state 15
    FALSE           shift and go to state 16
    OSB             shift and go to state 17
    INF             shift and go to state 18

    check                          shift and go to state 19
    lang                           shift and go to state 20
    premises                       shift and go to state 21
    statement                      shift and go to state 23
    exp                            shift and go to state 24
    term                           shift and go to state 25
    boolean                        shift and go to state 29
    list                           shift and go to state 30

state 4

    (3) start -> SPLIT . split
    (38) split -> . s_exp
    (39) s_exp -> . s_exp COMA s_exp
    (40) s_exp -> . s_exp SEMICOLON s_exp
    (41) s_exp -> . NAME OP exp CP
    (42) s_exp -> . term
    (43) s_exp -> . VAR
    (19) term -> . NUM
    (20) term -> . boolean
    (21) term -> . list
    (35) boolean -> . TRUE
    (36) boolean -> . FALSE
    (22) list -> . OSB exp CSB
    (23) list -> . INF exp SUP
    (24) list -> . OSB CSB

    NAME            shift and go to state 33
    VAR             shift and go to state 35
    NUM             shift and go to state 28
    TRUE            shift and go to state 15
    FALSE           shift and go to state 16
    OSB             shift and go to state 17
    INF             shift and go to state 18

    split                          shift and go to state 31
    s_exp                          shift and go to state 32
    term                           shift and go to state 34
    boolean                        shift and go to state 29
    list                           shift and go to state 30

state 5

    (4) start -> TOKEN . token
    (44) token -> . t_exp
    (45) token -> . t_list
    (46) token -> . t_statement
    (47) token -> . t_state_ins
    (48) t_exp -> . t_exp COMA t_exp
    (49) t_exp -> . t_exp SEMICOLON t_exp
    (50) t_exp -> . NAME OP t_exp CP
    (51) t_exp -> . t_term
    (52) t_exp -> . VAR
    (56) t_list -> . OSB t_exp CSB
    (57) t_list -> . INF t_exp SUP
    (58) t_list -> . OSB CSB
    (59) t_list -> . INF SUP
    (60) t_statement -> . t_statement COMA t_statement
    (61) t_statement -> . t_exp symb term
    (62) t_statement -> . t_exp symb VAR
    (63) t_statement -> . t_exp IN NAME
    (64) t_state_ins -> . t_list t_ins_exp
    (53) t_term -> . NUM
    (54) t_term -> . boolean
    (55) t_term -> . t_list
    (35) boolean -> . TRUE
    (36) boolean -> . FALSE

    NAME            shift and go to state 41
    VAR             shift and go to state 43
    OSB             shift and go to state 44
    INF             shift and go to state 45
    NUM             shift and go to state 46
    TRUE            shift and go to state 15
    FALSE           shift and go to state 16

    token                          shift and go to state 36
    t_exp                          shift and go to state 37
    t_list                         shift and go to state 38
    t_statement                    shift and go to state 39
    t_state_ins                    shift and go to state 40
    t_term                         shift and go to state 42
    boolean                        shift and go to state 47

state 6

    (5) start -> ISNUMBER . isnumber
    (68) isnumber -> . NUM

    NUM             shift and go to state 49

    isnumber                       shift and go to state 48

state 7

    (6) start -> STATE . state
    (89) state -> . st_list st_ins_exp
    (94) st_list -> . OSB s_exp CSB
    (95) st_list -> . INF s_exp SUP

    OSB             shift and go to state 52
    INF             shift and go to state 53

    state                          shift and go to state 50
    st_list                        shift and go to state 51

state 8

    (1) start -> CALC calc .

    $end            reduce using rule 1 (start -> CALC calc .)


state 9

    (69) calc -> c_exp .
    (78) c_exp -> c_exp . COMA c_exp
    (79) c_exp -> c_exp . SEMICOLON c_exp
    (71) c_condition -> c_exp . comparator c_exp
    (72) comparator -> . EQUAL EQUAL
    (73) comparator -> . SUP
    (74) comparator -> . SUP EQUAL
    (75) comparator -> . INF
    (76) comparator -> . INF EQUAL

    $end            reduce using rule 69 (calc -> c_exp .)
    COMA            shift and go to state 54
    SEMICOLON       shift and go to state 55
    EQUAL           shift and go to state 57
    SUP             shift and go to state 58
    INF             shift and go to state 59

    comparator                     shift and go to state 56

state 10

    (70) calc -> c_condition .

    $end            reduce using rule 70 (calc -> c_condition .)


state 11

    (77) c_exp -> NAME . OP c_exp CP

    OP              shift and go to state 60


state 12

    (80) c_exp -> NUM .

    COMA            reduce using rule 80 (c_exp -> NUM .)
    SEMICOLON       reduce using rule 80 (c_exp -> NUM .)
    EQUAL           reduce using rule 80 (c_exp -> NUM .)
    SUP             reduce using rule 80 (c_exp -> NUM .)
    INF             reduce using rule 80 (c_exp -> NUM .)
    $end            reduce using rule 80 (c_exp -> NUM .)
    CP              reduce using rule 80 (c_exp -> NUM .)


state 13

    (81) c_exp -> boolean .

    COMA            reduce using rule 81 (c_exp -> boolean .)
    SEMICOLON       reduce using rule 81 (c_exp -> boolean .)
    EQUAL           reduce using rule 81 (c_exp -> boolean .)
    SUP             reduce using rule 81 (c_exp -> boolean .)
    INF             reduce using rule 81 (c_exp -> boolean .)
    $end            reduce using rule 81 (c_exp -> boolean .)
    CP              reduce using rule 81 (c_exp -> boolean .)


state 14

    (82) c_exp -> list .

    COMA            reduce using rule 82 (c_exp -> list .)
    SEMICOLON       reduce using rule 82 (c_exp -> list .)
    EQUAL           reduce using rule 82 (c_exp -> list .)
    SUP             reduce using rule 82 (c_exp -> list .)
    INF             reduce using rule 82 (c_exp -> list .)
    $end            reduce using rule 82 (c_exp -> list .)
    CP              reduce using rule 82 (c_exp -> list .)


state 15

    (35) boolean -> TRUE .

    COMA            reduce using rule 35 (boolean -> TRUE .)
    SEMICOLON       reduce using rule 35 (boolean -> TRUE .)
    EQUAL           reduce using rule 35 (boolean -> TRUE .)
    SUP             reduce using rule 35 (boolean -> TRUE .)
    INF             reduce using rule 35 (boolean -> TRUE .)
    $end            reduce using rule 35 (boolean -> TRUE .)
    IN              reduce using rule 35 (boolean -> TRUE .)
    MINUS           reduce using rule 35 (boolean -> TRUE .)
    CSB             reduce using rule 35 (boolean -> TRUE .)
    CP              reduce using rule 35 (boolean -> TRUE .)


state 16

    (36) boolean -> FALSE .

    COMA            reduce using rule 36 (boolean -> FALSE .)
    SEMICOLON       reduce using rule 36 (boolean -> FALSE .)
    EQUAL           reduce using rule 36 (boolean -> FALSE .)
    SUP             reduce using rule 36 (boolean -> FALSE .)
    INF             reduce using rule 36 (boolean -> FALSE .)
    $end            reduce using rule 36 (boolean -> FALSE .)
    IN              reduce using rule 36 (boolean -> FALSE .)
    MINUS           reduce using rule 36 (boolean -> FALSE .)
    CSB             reduce using rule 36 (boolean -> FALSE .)
    CP              reduce using rule 36 (boolean -> FALSE .)


state 17

    (22) list -> OSB . exp CSB
    (24) list -> OSB . CSB
    (14) exp -> . exp COMA exp
    (15) exp -> . exp SEMICOLON exp
    (16) exp -> . NAME OP exp CP
    (17) exp -> . term
    (18) exp -> . VAR
    (19) term -> . NUM
    (20) term -> . boolean
    (21) term -> . list
    (35) boolean -> . TRUE
    (36) boolean -> . FALSE
    (22) list -> . OSB exp CSB
    (23) list -> . INF exp SUP
    (24) list -> . OSB CSB

    CSB             shift and go to state 62
    NAME            shift and go to state 27
    VAR             shift and go to state 26
    NUM             shift and go to state 28
    TRUE            shift and go to state 15
    FALSE           shift and go to state 16
    OSB             shift and go to state 17
    INF             shift and go to state 18

    exp                            shift and go to state 61
    term                           shift and go to state 25
    boolean                        shift and go to state 29
    list                           shift and go to state 30

state 18

    (23) list -> INF . exp SUP
    (14) exp -> . exp COMA exp
    (15) exp -> . exp SEMICOLON exp
    (16) exp -> . NAME OP exp CP
    (17) exp -> . term
    (18) exp -> . VAR
    (19) term -> . NUM
    (20) term -> . boolean
    (21) term -> . list
    (35) boolean -> . TRUE
    (36) boolean -> . FALSE
    (22) list -> . OSB exp CSB
    (23) list -> . INF exp SUP
    (24) list -> . OSB CSB

    NAME            shift and go to state 27
    VAR             shift and go to state 26
    NUM             shift and go to state 28
    TRUE            shift and go to state 15
    FALSE           shift and go to state 16
    OSB             shift and go to state 17
    INF             shift and go to state 18

    exp                            shift and go to state 63
    term                           shift and go to state 25
    boolean                        shift and go to state 29
    list                           shift and go to state 30

state 19

    (2) start -> CHECK check .

    $end            reduce using rule 2 (start -> CHECK check .)


state 20

    (37) check -> lang .

    $end            reduce using rule 37 (check -> lang .)


state 21

    (7) lang -> premises . MINUS MINUS conclusion

    MINUS           shift and go to state 64


state 22

    (8) lang -> MINUS . MINUS conclusion

    MINUS           shift and go to state 65


state 23

    (9) premises -> statement .
    (10) statement -> statement . COMA statement

    MINUS           reduce using rule 9 (premises -> statement .)
    COMA            shift and go to state 66


state 24

    (11) statement -> exp . symb term
    (12) statement -> exp . symb VAR
    (13) statement -> exp . IN NAME
    (14) exp -> exp . COMA exp
    (15) exp -> exp . SEMICOLON exp
    (25) symb -> . EQUAL EQUAL
    (26) symb -> . INF EQUAL
    (27) symb -> . SUP EQUAL
    (28) symb -> . INF
    (29) symb -> . SUP
    (30) symb -> . MINUS SUP

    IN              shift and go to state 68
    COMA            shift and go to state 69
    SEMICOLON       shift and go to state 70
    EQUAL           shift and go to state 71
    INF             shift and go to state 72
    SUP             shift and go to state 73
    MINUS           shift and go to state 74

    symb                           shift and go to state 67

state 25

    (17) exp -> term .

    IN              reduce using rule 17 (exp -> term .)
    COMA            reduce using rule 17 (exp -> term .)
    SEMICOLON       reduce using rule 17 (exp -> term .)
    EQUAL           reduce using rule 17 (exp -> term .)
    INF             reduce using rule 17 (exp -> term .)
    SUP             reduce using rule 17 (exp -> term .)
    MINUS           reduce using rule 17 (exp -> term .)
    CSB             reduce using rule 17 (exp -> term .)
    CP              reduce using rule 17 (exp -> term .)
    $end            reduce using rule 17 (exp -> term .)


state 26

    (18) exp -> VAR .

    IN              reduce using rule 18 (exp -> VAR .)
    COMA            reduce using rule 18 (exp -> VAR .)
    SEMICOLON       reduce using rule 18 (exp -> VAR .)
    EQUAL           reduce using rule 18 (exp -> VAR .)
    INF             reduce using rule 18 (exp -> VAR .)
    SUP             reduce using rule 18 (exp -> VAR .)
    MINUS           reduce using rule 18 (exp -> VAR .)
    CSB             reduce using rule 18 (exp -> VAR .)
    CP              reduce using rule 18 (exp -> VAR .)
    $end            reduce using rule 18 (exp -> VAR .)


state 27

    (16) exp -> NAME . OP exp CP

    OP              shift and go to state 75


state 28

    (19) term -> NUM .

    IN              reduce using rule 19 (term -> NUM .)
    COMA            reduce using rule 19 (term -> NUM .)
    SEMICOLON       reduce using rule 19 (term -> NUM .)
    EQUAL           reduce using rule 19 (term -> NUM .)
    INF             reduce using rule 19 (term -> NUM .)
    SUP             reduce using rule 19 (term -> NUM .)
    MINUS           reduce using rule 19 (term -> NUM .)
    $end            reduce using rule 19 (term -> NUM .)
    CSB             reduce using rule 19 (term -> NUM .)
    CP              reduce using rule 19 (term -> NUM .)


state 29

    (20) term -> boolean .

    IN              reduce using rule 20 (term -> boolean .)
    COMA            reduce using rule 20 (term -> boolean .)
    SEMICOLON       reduce using rule 20 (term -> boolean .)
    EQUAL           reduce using rule 20 (term -> boolean .)
    INF             reduce using rule 20 (term -> boolean .)
    SUP             reduce using rule 20 (term -> boolean .)
    MINUS           reduce using rule 20 (term -> boolean .)
    $end            reduce using rule 20 (term -> boolean .)
    CSB             reduce using rule 20 (term -> boolean .)
    CP              reduce using rule 20 (term -> boolean .)


state 30

    (21) term -> list .
